--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="運行情報">運行情報</string>
     <string name="channel_id">test</string>
     <string name="channel_name">testChannel</string>
+    <string name="default_notification_channel_id">fcm_default_channel</string>
 </resources>
