--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="channel_id">test</string>
     <string name="channel_name">testChannel</string>
     <string name="default_notification_channel_id">fcm_default_channel</string>
+    <string name="newPassword">新しいパスワード</string>
+    <string name="oldPassword">現在のパスワード</string>
+    <string name="changePassword">パスワード変更</string>
 </resources>
