テストサーバーに接続するために任意のIPとPortを入力する機能を追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="lectureLocation">講義室</string>
     <string name="buttonTitle">登録名</string>
     <string name="url">URL</string>
+    <string name="testServerIpText">TestServerIP</string>
+    <string name="testServerPortText">testServerPort</string>
 </resources>
