--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="deleteBtn">ボタン削除</string>
     <string name="createBtn">ボタン追加</string>
     <string name="バス時刻表">バス時刻表</string>
+    <string name="report">報告</string>
 </resources>
