update:問い合わせ変更

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="時刻表">時刻表</string>
     <string name="お知らせ">お知らせ</string>
     <string name="時間割">時間割</string>
-    <string name="問い合わせ">各種問い合わせ</string>
+    <string name="問い合わせ">問い合わせ</string>
     <string name="userNameHint">学籍番号</string>
     <string name="password">パスワード</string>
     <string name="login">login</string>
