--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,5 @@
     <string name="createClass">講義登録</string>
     <string name="deleteClass">講義削除</string>
     <string name="cancel">キャンセル</string>
-    <string name="isShow">このメッセージを24時間表示しない</string>
+    <string name="isShow">報告済。このメッセージを表示しない。</string>
 </resources>
