--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="inquiryContent">問い合わせ内容</string>
     <string name="send">送信</string>
     <string name="links">各種リンク</string>
+    <string name="その他">その他</string>
 </resources>
